--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,5 +14,6 @@
   <p>投稿ユーザー画像：<%= image_tag post_image.user.get_profile_image(100,100) %></p>
   <p>説明：<%= post_image.caption %></p>
   <p>ユーザーネーム：<%= post_image.user.name %></p>
+  <p><%= "#{post_image.post_comments.count}コメント",post_image_path(post_image.id) %></p>
 </div>
 <% end %>
